--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ httparse = { version = "1.8", optional = true }
 httpdate = { version = "1.0", optional = true }
 itoa = { version = "1", optional = true }
 libc = { version = "0.2", optional = true }
+smallvec = { version = "1.12", features = ["const_generics", "const_new"], optional = true }
 tracing = { version = "0.1", default-features = false, features = ["std"], optional = true }
 want = { version = "0.3", optional = true }
 
@@ -78,8 +79,8 @@ http1 = ["dep:futures-channel", "dep:futures-util", "dep:httparse", "dep:itoa"]
 http2 = ["dep:futures-channel", "dep:futures-util", "dep:h2"]
 
 # Client/Server
-client = ["dep:want"]
-server = ["dep:httpdate"]
+client = ["dep:want", "dep:smallvec"]
+server = ["dep:httpdate", "dep:smallvec"]
 
 # C-API support (currently unstable (no semver))
 ffi = ["dep:libc", "dep:http-body-util"]
